--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxt/content": "^2.7.2",
     "@nuxt/devtools": "latest",
     "@types/node": "^18.17.3",
-    "nuxt": "^3.6.5"
+    "nuxt": "^3.6.5",
+    "sitemap": "^7.1.1"
+  },
+  "dependencies": {
+    "@nuxtjs/robots": "^3.0.0",
+    "mysql2": "^3.6.0",
+    "nuxt-i18n": "^6.28.1",
+    "sequelize": "^6.32.1"
   }
 }
